--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react": "16.8.3",
         "react-dom": "16.8.3",
         "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+        "react-native-keyboard-aware-scroll-view": "^0.9.1",
         "react-native-paper": "^3.2.1",
         "react-native-web": "^0.11.7",
         "react-navigation": "^4.0.10",
