--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
         "react": "16.8.3",
         "react-dom": "16.8.3",
         "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-        "react-native-gesture-handler": "^1.3.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.1",
         "react-native-paper": "^3.2.1",
-        "react-native-reanimated": "^1.4.0",
         "react-native-vector-icons": "^6.6.0",
         "react-native-web": "^0.11.7",
         "react-navigation": "^4.0.10",
@@ -25,7 +23,9 @@
         "react-redux": "^7.1.3",
         "redux": "^4.0.4",
         "redux-thunk": "^2.3.0",
-        "remote-redux-devtools": "^0.5.16"
+        "remote-redux-devtools": "^0.5.16",
+        "react-native-gesture-handler": "~1.3.0",
+        "react-native-reanimated": "~1.3.0"
     },
     "devDependencies": {
         "babel-preset-expo": "^7.1.0"
